--- a/src/components/BestSellers.css
+++ b/src/components/BestSellers.css
@@ -6,8 +6,8 @@
 
 .bestsellers-main-text {
     font-family: Arial, Helvetica, sans-serif;
-    padding: 20px;
-    font-size: 28px;
+    padding: 20px 20px 10px 20px;
+    font-size: 38px;
     font-weight: 600;
     text-align: center;
     color: rgb(98, 98, 98);
@@ -15,7 +15,7 @@
 
 .bestsellers-main-text p {
     margin-bottom: 20px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 100;
     color: rgb(92, 90, 89);
 }
@@ -24,7 +24,7 @@
     display: flex;
     flex-wrap: wrap; /* Allows items to wrap on smaller screens */
     justify-content: center; /* Center aligns items */
-    gap: 50px; /* Adds space between items */
+    gap: 30px; /* Adds space between items */
     margin: 20px 0;
 }
 
@@ -45,9 +45,8 @@
 }
 
 .bestsellers-top-product img {
-    height: 500px;
+    height: 450px;
     width: 100%;
-    /* object-fit: cover; */
     background-size: cover;
     background-position: center;
 }
@@ -69,7 +68,6 @@
     background-color: #525252;
     color: #fff;
     border: none;
-    border-radius: 5px;
     transition: background-color 0.3s ease-in-out;
     font-size: 16px;
     margin: 30px auto 10px auto;
@@ -119,5 +117,6 @@
     .bestsellers-top-products-shop-now-button {
         font-size: 14px;
         padding: 8px 20px;
+        cursor: pointer;
     }
 }
