--- a/src/components/NewArrivals.css
+++ b/src/components/NewArrivals.css
@@ -11,10 +11,10 @@
 } */
 
 .new-arrivals-text {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
-    font-size: 32px;
-    font-weight: 600;
+    font-size: 38px;
+    font-weight: 500;
     text-align: center; /* Center the heading */
     color: rgb(98, 98, 98);
 }
@@ -33,7 +33,6 @@
     max-width: 350px; /* Prevents items from getting too large */
     min-width: 250px; /* Ensures layout holds on smaller screens */
     text-align: center; /* Center align product details */
-    border-radius: 10px; /* Adds rounded corners */
     background: #fff; /* White background for each product */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adds subtle shadow */
     overflow: hidden; /* Ensures image stays within bounds */
@@ -48,7 +47,6 @@
     width: 100%;
     height: 400px; /* Uniform image size */
     object-fit: cover; /* Makes images look proportional */
-    border-radius: 10px 10px 0 0; /* Rounds top corners */
 }
 
 .new-arrivals-product-name {
@@ -68,11 +66,15 @@
     background-color: #525252;
     color: #fff;
     border: none;
-    border-radius: 5px;
     transition: background-color 0.3s ease-in-out;
     font-size: 16px;
     margin: 20px auto;
     display: block; /* Centers button */
+    cursor: pointer;
+}
+.new-arrivals-products-shop-now-button a{
+    text-decoration: none;
+    color: #fff;
 }
 
 .new-arrivals-products-shop-now-button:hover {
